Changes the name of the home template from main to home
This was to reduce similarities in name between main view and the main process for launching the app

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -9,6 +9,6 @@
   <body class="app-drag">
     <div class="app-events-test">Click me for science!</div>
     
-    <script src="../js/page-main.js"></script>
+    <script src="../js/home.js"></script>
   </body>
 </html>
