Adds header for home screen and styles
Adds some base styles for rendering all elements and styles specific to the header and the application exit button

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="../../public/css/style.css">
   </head>
   <body class="app-drag">
-    <div class="app-events-test">Click me for science!</div>
+    <header id="header" class="header">
+        <ul>
+            <li class="header-item">
+                Placeholder
+            </li>
+            <li id="app-exit" class="header-item app-exit">
+                X
+            </li>
+        </ul>
+        <div class="app-events-test">Click me for science!</div>
+    </header>
     
     <script src="../js/home.js"></script>
   </body>
