--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,11 +1,12 @@
 // CSS Reset
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     border: 0;
     outline: 0;
     font-size: 100%;
-    font-family: arial;
+    font-family: open-sans;
     vertical-align: baseline;
     background: transparent;
 }
