--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -1,32 +1,3 @@
-.sandbox-connect-slide {
-    display: none;
-    width: 0;
-    overflow: hidden;
-    position: fixed;
-    top: 40px;
-    left: 0;
-    height: 100%;
-    background-color: #5a5a5a;
-    
-    &.active {
-        display: block;
-        animation: leftFrameSlider .5s;
-        animation-fill-mode: forwards;
-    }
-}
-
-@keyframes leftFrameSlider {
-    from {
-        opacity: 0;
-        width: 0;
-    }
-    
-    to {
-        opacity: 1;
-        width: 500px;
-    }
-}
-
 .header {
     height: 40px;
     background-color: #dad2c8;
@@ -73,6 +44,20 @@
 
 .sandbox-connect-slide {
     color: #fff;
+    display: none;
+    width: 0;
+    overflow: hidden;
+    position: fixed;
+    top: 40px;
+    left: 0;
+    height: 100%;
+    background-color: #5a5a5a;
+    
+    &.active {
+        display: block;
+        animation: leftFrameSlider .5s;
+        animation-fill-mode: forwards;
+    }
     
     .slide-title {
         padding: 8px 0;
@@ -82,6 +67,17 @@
         font-family: open-sans-bold;
         font-size: 28px;
         border-bottom: 1px solid #fff;
+    }
+    
+    .error-container {
+        margin-top: 10px;
+        text-align: center;
+        color: #ff0000;
+        font-family: open-sans-bold;
+        
+        span {
+            display: none;
+        }
     }
     
     .sandbox-login-form {
@@ -112,5 +108,17 @@
         text-align: center;
         font-size: 22px;
         font-family: open-sans-semibold;
+    }
+}
+
+@keyframes leftFrameSlider {
+    from {
+        opacity: 0;
+        width: 0;
+    }
+    
+    to {
+        opacity: 1;
+        width: 500px;
     }
 }
