Adds error message container into sandbox login drawer

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -19,6 +19,10 @@
     <div id="screen-sandbox-connect" class="sandbox-connect-slide">
         <span class="slide-title">Sandbox Login</span>
         
+        <div class="error-container">
+            <span class="connection-error">Error creating sandbox config.  Please try again.</span>
+        </div>
+        
         <form class="sandbox-login-form">
             <span class="input-title">Hostname</span>
             <input type="text" class="input-hostname"></input>
