Adds functionality to display connection error for sandbox login
If the credentials function fails to create the credentials file it sends a login-failure communication to the renderer process.  When this is received it will reveal the connection error message span.

--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -77,6 +77,10 @@
         
         span {
             display: none;
+            
+            &.active {
+                display: block;
+            }
         }
     }
     
