Adds Logs header and reveals it after sandbox login success
The logs button will be revealed in the header after a successful sandbox login response

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -11,6 +11,9 @@
         <div id="app-sandbox-connect" class="header-item app-sandbox-connect border-red">
             Connect
         </div>
+        <div id="app-sandbox-logs" class="header-item app-sandbox-logs border-red">
+            Logs
+        </div>
         <div id="app-exit" class="header-item app-exit">
             X
         </div>
