Adds full page loader overlay utility
Uses third party animation to display a loading overlay for longer load time items

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../../public/css/style.css">
   </head>
   <body class="app-drag">
+    <div id="page-loader" class="preloader-container">
+        <!-- CSS Preloader : Credit to Deineko @ https://codepen.io/deineko/pen/EPwPNV -->
+        <div class="preloader"></div>
+    </div>
     <header id="header" class="header">
         <div id="app-sandbox-connect" class="header-item app-sandbox-connect border-red">
             Connect
