Adds placeholders for sandbox logs slide out screen

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -11,6 +11,7 @@
         <!-- CSS Preloader : Credit to Deineko @ https://codepen.io/deineko/pen/EPwPNV -->
         <div class="preloader"></div>
     </div>
+    
     <header id="header" class="header">
         <div id="app-sandbox-connect" class="header-item app-sandbox-connect border-red">
             Connect
@@ -46,6 +47,13 @@
         
         <div id="sandbox-login-submit" class="sandbox-login-submit">Login</div>
     </div>
+    
+    <div id="screen-sandbox-logs" class="sandbox-logs-slide">
+        <div class="sandbox-logs-controls">controls</div>
+        <div class="sandbox-logs-list">list</div>
+        <div class="sandbox-logs-viewer">viewer</div>
+    </div>
+    
     <script src="../js/home.js"></script>
   </body>
 </html>
