Adds styles and structure for logs frame of homepage

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -50,8 +50,10 @@
     
     <div id="screen-sandbox-logs" class="sandbox-logs-slide">
         <div class="sandbox-logs-controls">controls</div>
-        <div class="sandbox-logs-list">list</div>
-        <div class="sandbox-logs-viewer">viewer</div>
+        <ul>
+            <li class="sandbox-logs-list">list</li>
+            <li class="sandbox-logs-viewer">viewer</li>
+        </ul>
     </div>
     
     <script src="../js/home.js"></script>
