Adds styles and scripts for displaying list of logs on sandbox

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -51,7 +51,7 @@
     <div id="screen-sandbox-logs" class="sandbox-logs-slide">
         <div class="sandbox-logs-controls">controls</div>
         <ul>
-            <li class="sandbox-logs-list">list</li>
+            <li class="sandbox-logs-list"></li>
             <li class="sandbox-logs-viewer">viewer</li>
         </ul>
     </div>
