--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -1,9 +1,14 @@
 .sandbox-logs-slide {
+    display: none;
     position: fixed;
     top: 40px;
     left: 0;
     height: 100%;
     width: 100%;
+    
+    &.active {
+        display: block;
+    }
     
     ul {
         height: 100%;
@@ -17,11 +22,22 @@
     
     .sandbox-logs-list {
         float: left;
-        width: 300px;
+        width: auto;
+        max-width: 500px;
         overflow: auto;
         height: 100%;
         border-right: 1px solid #000;
         padding: 5px;
+        
+        .log-name {
+            height: 22px;
+            white-space: nowrap;
+            cursor: pointer;
+            
+            &:hover {
+                text-decoration: underline;
+            }
+        }
     }
     
     .sandbox-logs-viewer {
