Adds some rough formatting to the raw log data and some styles
This will display a very rough output of the log file into the viewer window

--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -42,8 +42,13 @@
     
     .sandbox-logs-viewer {
         float: none;
-        overflow: hidden;
+        overflow: auto;
         padding: 5px;
         height: 100%;
+        
+        .log-entry {
+            margin-bottom: 10px;
+            font-size: 12px;
+        }
     }
 }
