Uses preformated tag to preserve white space of log file
Still retaining the custom break on log entries because in the DWRE logs those actually run together.

--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -43,10 +43,10 @@
     .sandbox-logs-viewer {
         float: none;
         overflow: auto;
-        padding: 5px;
+        padding: 5px 10px;
         height: 100%;
         
-        .log-entry {
+        pre {
             margin-bottom: 10px;
             font-size: 12px;
         }
