Fixes issue where connection screen was underneath log content

--- a/src/scss/page/home/_sandbox-connect.scss
+++ b/src/scss/page/home/_sandbox-connect.scss
@@ -13,6 +13,7 @@
         display: block;
         animation: leftFrameSlider .5s;
         animation-fill-mode: forwards;
+        z-index: 10;
     }
     
     .slide-title {
