Adds functionality to refresh log file
Had to store off the data of the current active log in order to process a refresh.  Created an element with ID active-log-file which will be used to point to the currently active log.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -50,6 +50,7 @@
     
     <div id="screen-sandbox-logs" class="sandbox-logs-slide">
         <div class="sandbox-logs-controls">
+            <div id="active-log-file" style="display: none !important;"></div>
             <div class="log-list-controls">
                 <div id="refresh-log-list" class="log-control-button">Refresh List</div>
             </div>
