Adds log dialog container in home view
This will be used to inject the clear logs dialog template

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -59,6 +59,7 @@
                 <div id="clear-log-file" class="log-control-button">Reset Log File</div>
             </div>
         </div>
+        <div id="logs-dialog"></div>
         <ul>
             <li class="sandbox-logs-list"></li>
             <li class="sandbox-logs-viewer">viewer</li>
