--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -82,3 +82,36 @@
         margin-left: 0;
     }
 }
+
+.clear-log-dialog {
+    .clear-log-header-bar {
+        background-color: #ff9797;
+        height: 40px;
+        font-size: 28px;
+        padding-left: 10px;
+        background-color: #d40000;
+        color: #fff;
+    }
+    .clear-log-main {
+        padding-left: 10px;
+        border-bottom: 2px solid #000;
+        
+        p {
+            margin: 10px 0;
+            font-size: 18px;
+        }
+        
+        .log-dialog-button {
+            display: inline-block;
+            height: 40px;
+            border: 1px solid #ccc;
+            padding: 0 10px;
+            font-size: 30px;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            background-color: #d40000;
+            color: #fff;
+            cursor: pointer;
+        }
+    }
+}
