--- a/app/views/home.html
+++ b/app/views/home.html
@@ -43,6 +43,8 @@
             
             <span class="input-title">Active Code Staging Directory</span>
             <input type="text" class="input-staging"></input>
+            
+            <input type="submit" class="sandbox-login-submit hidden"></input>
         </form>
         
         <div id="sandbox-login-submit" class="sandbox-login-submit">Login</div>
