Adds styles to hide and display log dialog

--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -83,6 +83,14 @@
     }
 }
 
+#logs-dialog {
+    display: none;
+    
+    &.active {
+        display: block;
+    }
+}
+
 .clear-log-dialog {
     .clear-log-header-bar {
         background-color: #ff9797;
