Fixes #11 by  changing the message displayed on a bad connection
Also removes TODO task for adding logging

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -28,7 +28,7 @@
         <span class="slide-title">Sandbox Login</span>
         
         <div class="error-container">
-            <span class="connection-error">Error creating sandbox config.  Please try again.</span>
+            <span class="connection-error">Error establishing connection with sandbox.  Double check your credentials and try again.</span>
         </div>
         
         <form class="sandbox-login-form">
