Removes text from log viewer

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -84,7 +84,7 @@
         </div>
         <ul>
             <li class="sandbox-logs-list"></li>
-            <li class="sandbox-logs-viewer">viewer</li>
+            <li class="sandbox-logs-viewer"></li>
         </ul>
     </div>
     
