Fixes #15 by hiding log controls unless a log file is actually open
When the user first lands on the log page there isn't a log active.  The controls for refreshing and deleting a log will be hidden at this time.  Once the user pulls a log there will always be an active log so the controls are revealed

--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -66,6 +66,11 @@
 .log-view-controls {
     float: right;
     padding-right: 10px;
+    display: none;
+    
+    &.active {
+        display: block;
+    }
 }
 
 .log-control-button {
