--- a/src/scss/page/home/_home-header.scss
+++ b/src/scss/page/home/_home-header.scss
@@ -5,7 +5,7 @@
     .header-item {
         display: inline-block;
         font-size: 22px;
-        padding-top: 5px;
+        padding: 5px 5px 0;
         cursor: pointer;
         margin-right: 25px;
         border-bottom: 5px solid;
@@ -24,6 +24,8 @@
         }
         
         &.app-sandbox-logs {
+            height: 100%;
+            border-bottom: none;
             display: none;
             
             &.active {
@@ -51,6 +53,10 @@
         
         &.border-green {
             border-color: #1dd633;
+        }
+        
+        &:hover {
+            background-color: #e6e4e1;
         }
     }
 }
