Refs #12 - changes the font of the header items

--- a/src/scss/page/home/_home-header.scss
+++ b/src/scss/page/home/_home-header.scss
@@ -3,6 +3,7 @@
     background-color: #dad2c8;
     
     .header-item {
+        font-family: open-sans-semibold;
         display: inline-block;
         font-size: 22px;
         padding: 5px 5px 0;
