--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -51,9 +51,15 @@
         pre {
             margin-bottom: 10px;
             font-size: 12px;
+        }
+        
+        .tail-group {
+            border-bottom: 3px solid #ff0000;
+            padding-bottom: 10px;
+            margin-top: 20px;
             
-            &:last-child {
-                margin-bottom: 80px;
+            &:first-child {
+                margin-top: 0;
             }
         }
     }
