Refs #10 by adding timestamp to log tails
Also adds styles for the date section

--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -102,6 +102,11 @@
     }
 }
 
+.log-view .log-tail-date {
+    font-family: open-sans-bold;
+    font-size: 14px;
+}
+
 .clear-log-dialog {
     .clear-log-header-bar {
         background-color: #ff9797;
