--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -8,7 +8,8 @@
     }
     
     ul {
-        height: 100%;
+        display: flex;
+        flex-wrap: nowrap;
     }
     
     .sandbox-logs-controls {
@@ -19,11 +20,8 @@
     }
     
     .sandbox-logs-list {
-        float: left;
-        width: auto;
-        max-width: 500px;
-        overflow: auto;
-        height: 100%;
+        order: 1;
+        width: 500px;
         border-right: 1px solid #000;
         padding: 5px;
         
@@ -43,10 +41,8 @@
     }
     
     .sandbox-logs-viewer {
-        float: none;
-        overflow: auto;
+        order: 2;
         padding: 5px 10px;
-        height: 100%;
         
         pre {
             margin-bottom: 10px;
