:bug: Closes #16 by updating document title
left behind the initial placeholder for the homepage

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>SWIG!</title>
     
     <link rel="stylesheet" href="../../public/css/style.css">
   </head>
