Closes #18 by adding log title feature
When a log file is selected for viewing the title of that log will be displayed in the control bar for logs

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -57,6 +57,10 @@
                 <div id="refresh-log-list" class="log-control-button">Refresh List</div>
             </div>
             <div class="log-view-controls">
+                <div id="active-log" class="log-control-button">
+                    <span>Current Log File : </span>
+                    <span class="log-name"></span>
+                </div>
                 <div id="refresh-log-view" class="log-control-button">Refresh File</div>
                 <div id="clear-log-file" class="log-control-button">Reset Log File</div>
             </div>
