Completes #17 by adding active state to log navigation

--- a/src/scss/page/home/_home-header.scss
+++ b/src/scss/page/home/_home-header.scss
@@ -34,6 +34,10 @@
             }
         }
         
+        &.active-nav {
+            background-color: #b5aea5;
+        }
+        
         &.app-exit {
             position: relative;
             left: 12px;
