Refs #20 by adding flexbox helper and converting log view from list

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -86,10 +86,10 @@
                 </div>
             </div>
         </div>
-        <ul>
-            <li class="sandbox-logs-list"></li>
-            <li class="sandbox-logs-viewer"></li>
-        </ul>
+        <div class="log-view-container do-you-even-lift">
+            <div class="sandbox-logs-list"></div>
+            <div class="sandbox-logs-viewer"></div>
+        </div>
     </div>
     
     <script src="../js/home.js"></script>
