--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,6 +5,9 @@
     <title>SWIG!</title>
     
     <link rel="stylesheet" href="../../public/css/style.css">
+    
+    <script>window.$ = window.jQuery = require('../js/jquery.js');</script>
+    <script>window.$.ui = require('../js/jquery-ui/jquery-ui.js');</script>
   </head>
   <body class="app-drag">
     <div id="page-loader" class="preloader-container">
