refs #20 by removing generic flexbox class

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div class="log-view-container do-you-even-lift">
+        <div class="log-view-container">
             <div class="sandbox-logs-list"></div>
             <div class="sandbox-logs-viewer"></div>
         </div>
