--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -24,20 +24,24 @@
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        overflow: auto;
+        overflow: hidden;
+        height: calc(100% - 40px);
         
         .sandbox-logs-list {
             min-height: min-content;
+            max-width: 500px;
             display: flex;
             flex-grow: 1;
             flex-direction: column;
-        }
-        
-        .sandbox-logs-viewer {
-            min-height: min-content;
-            display: flex;
-            flex-grow: 2;
-            flex-direction: column;
+            height: 100%;
+            
+            .list-of-logs {
+                padding: 5px;
+                flex: 1 1 auto;
+                overflow-y: auto;
+                overflow-x: hidden;
+                height: 100%;
+            }
         }
     }
     
@@ -62,8 +66,19 @@
     }
     
     .sandbox-logs-viewer {
+        min-height: min-content;
+        display: flex;
+        flex-grow: 2;
+        flex-direction: column;
+        height: 100%;
         order: 2;
         padding: 5px 10px;
+        
+        .log-view {
+            height: 100%;
+            overflow-y: scroll;
+            overflow-x: hidden;
+        }
         
         pre {
             margin-bottom: 10px;
