refs #20 by adding comment about magic number hack

--- a/src/scss/page/home/_sandbox-logs.scss
+++ b/src/scss/page/home/_sandbox-logs.scss
@@ -25,6 +25,7 @@
         flex-direction: row;
         flex-wrap: nowrap;
         overflow: hidden;
+        /** the 40px magic number represents the height of the header.  Flex is pushing everything just slightly off the screen otherwise. **/
         height: calc(100% - 40px);
         
         .sandbox-logs-list {
