Fixes #23 by changing how the active log styles are applied
Adds an active-log class to the log title and targets that instead of first-child

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -60,7 +60,7 @@
                 <div id="refresh-log-list" class="log-control-button">Refresh List</div>
             </div>
             <div class="log-view-controls">
-                <div id="active-log" class="log-control-button">
+                <div id="active-log" class="log-control-button active-log">
                     <span>Current Log File : </span>
                     <span class="log-name"></span>
                 </div>
